# Backend-estoque

./: CHANGELOG.md  Dockerfile  README.md  create_superuser.py  pyproject.toml  release.config.js
.github/workflows/: CI.yml  release.yml
api/: admin.py  urls.py
api/auth/: auth_custom.py  permissions.py  views_tokens.py
api/migrations/: 0001_initial.py  0002_alter_peca_options.py  0003_jwtaccesstoken.py
api/models/: __init__.py  jwt_access_token.py  peca.py
api/serializers/: serializer.py
api/tests/: tests.py
api/views/: __init__.py  peca.py
core/: settings.py  urls.py
scripts/: release.sh
static/assets/: index-BtLi85N8.js  index-BwS5npNJ.css
templates/: index.html
