[project]
name = "backend-estoque"
version = "1.1.1"
description = ""
authors = [
    {name = "T-Terra",email = "gabst138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
pip-audit = "^2.8.0"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-django = "^4.10.0"

# -- Example FILE: pyproject.toml
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py", "tests/*.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
